--- a/contact-us.html
+++ b/contact-us.html
@@ -148,7 +148,7 @@
         <div class="col-md-12">
           <div class="mobile-menu">
             <div class="logo">
-              <a href="index.php"><img src="img/logo/logo-small-black.svg" alt="" width="80"/></a>
+              <a href="index.php"><img src="img/logo/logo-simple-black.svg" alt="" width="80"/></a>
             </div>
             <nav id="dropdown">
               <ul>
@@ -260,12 +260,6 @@
                       <input id="to" name="to" type="text"/>
                     </div>
                   </div>
-                  <div class="col-md-12 col-sm-12">
-                    <div class="textarea-contact">
-                      <label  class="form-label" for="textfield"><span>Сообщение</span></label>
-                      <textarea class="textfield" id="textfield" cols="30" rows="10"></textarea>
-                    </div>
-                  </div>
                   <div class="message"></div>
                   <button class="readon" type="submit">Отправить заявку</button>
                 </div>
@@ -332,8 +326,7 @@
             <ul>
               <li class="cc-space">
                 <span>Email:</span>
-                <span><a href="#">support@sitename.com</a> <br/>
-									<a href="#">info@sitename.com</a></span>
+                <span><a href="mailto:info@gtrans.group">info@gtrans.group</a> </span>
                 <div class="su-spacer"></div>
               </li>
               <li>
