--- a/moscow-ekb.html
+++ b/moscow-ekb.html
@@ -148,7 +148,7 @@
         <div class="col-md-12">
           <div class="mobile-menu">
             <div class="logo">
-              <a href="index.php"><img src="img/logo/logo-small-black.svg" alt="" width="80"/></a>
+              <a href="index.php"><img src="img/logo/logo-simple-black.svg" alt="" width="80"/></a>
             </div>
             <nav id="dropdown">
               <ul>
@@ -490,114 +490,109 @@
       <div class="awesome-portfolio-content">
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all light">
-          <a>
+          <div class="portfolio-hover">
             <div class="awesome-img"><img src="img/portfolio/sedan.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Седаны и хэтчбеки</h3>
-              <button href="contact-us.php" class="readon">Перевезти</button>
+              <a href="contact-us.php" class="readon">Перевезти</a>
             </div>
-          </a>
+          </div>
         </div>
         <!-- single-awesome-portfolio end -->
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all ligth">
-          <a>
+          <div class="portfolio-hover">
             <div class="awesome-img"><img src="img/portfolio/universal.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Универсалы</h3>
-              <p>Поможем вам провести транспортировку как обычных универсалов, так и модификаций повышенной
-                проходимости</p>
+              <a href="contact-us.php" class="readon">Перевезти</a>
             </div>
-          </a>
+          </div>
         </div>
         <!-- single-awesome-portfolio end -->
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all light">
-          <a>
+          <div class="portfolio-hover">
             <div class="awesome-img"><img src="img/portfolio/coupe.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Кабриолеты и купе</h3>
-              <button href="contact-us.php" class="readon">Перевезти</button>
+              <a href="contact-us.php" class="readon">Перевезти</a>
             </div>
-          </a>
+          </div>
         </div>
         <!-- single-awesome-portfolio end -->
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all moto">
-          <>
+          <div class="portfolio-hover">
             <div class="awesome-img"><img src="img/portfolio/bike.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Мотоциклы и квадроциклы</h3>
-              <button href="contact-us.php" class="readon">Перевезти</button>
+              <a href="contact-us.php" class="readon">Перевезти</a>
             </div>
-          </a>
+          </div>
         </div>
         <!-- single-awesome-portfolio end -->
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all light">
-          <a>
+          <div class="portfolio-hover">
             <div class="awesome-img"><img src="img/portfolio/crossover.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Кроссоверы</h3>
-              <p>Перевозим компактные и полноразмерные кроссоверы любых модификаций и массогабаритных
-                размеров</p>
-            </div>
-          </a>
+<a href="contact-us.php" class="readon">Перевезти</a>            </div>
+          </div>
         </div>
         <!-- single-awesome-portfolio end -->
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all light">
-          <a class="fancybox" href="img/portfolio/offroad.jpg" data-fancybox-group="group">
+          <div class="portfolio-hover">
             <div class="awesome-img"><img src="img/portfolio/offroad.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Пикапы и внедорожники</h3>
-              <button href="contact-us.php" class="readon">Перевезти</button>
+              <a href="contact-us.php" class="readon">Перевезти</a>
             </div>
-          </a>
+          </div>
         </div>
         <!-- single-awesome-portfolio end -->
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all commerce light">
-          <a class="fancybox" href="img/portfolio/commerce.jpg" data-fancybox-group="group">
+          <div class="portfolio-hover">
             <div class="awesome-img"><img src="img/portfolio/commerce.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Коммерческий транспорт</h3>
-              <p>Погрузим на автовоз и доставим ваш легкий коммерческий транспорт к месту назначения в кратчайшие
-                сроки</p>
-            </div>
-          </a>
+              <a href="contact-us.php" class="readon">Перевезти</a>             </div>
+          </div>
         </div>
         <!-- single-awesome-portfolio end -->
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all commerce">
-          <a class="fancybox" href="img/portfolio/microbus.jpg" data-fancybox-group="group">
+          <div class="portfolio-hover">
             <div class="awesome-img"><img src="img/portfolio/microbus.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Микроавтобусы</h3>
-              <button href="contact-us.php" class="readon">Перевезти</button>
+              <a href="contact-us.php" class="readon">Перевезти</a>
             </div>
-          </a>
+          </div>
         </div>
         <!-- single-awesome-portfolio end -->
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all commerce heavy">
-          <a class="fancybox" href="img/portfolio/bus.jpg" data-fancybox-group="group">
+          <div class="portfolio-hover">
             <div class="awesome-img"><img src="img/portfolio/bus.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Автобусы</h3>
-<button href="contact-us.php" class="readon">Перевезти</button>            </div>
-          </a>
+<a href="contact-us.php" class="readon">Перевезти</a>            </div>
+          </div>
         </div>
         <!-- single-awesome-portfolio end -->
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all commerce heavy">
-          <a class="fancybox" href="img/portfolio/truck.jpg" data-fancybox-group="group">
+          <div class="portfolio-hover">
             <div class="awesome-img"><img src="img/portfolio/truck.jpg" alt=""/></div>
             <div class="awesome-info">
               <h3>Грузовики</h3>
-              <button href="contact-us.php" class="readon">Перевезти</button>
+              <a href="contact-us.php" class="readon">Перевезти</a>
             </div>
-          </a>
+          </div>
         </div>
         <!-- single-awesome-portfolio end -->
       </div>
@@ -661,7 +656,7 @@
 			<span class="wrap"></span>
 		    </span></strong> ДОСТАВКА АВТОМОБИЛЕЙ</h2>
     <p></p>
-    <a class="read-more" href="#">Оставить заявку</a>
+    <a class="read-more" href="#form">Оставить заявку</a>
   </div>
 </div>
 <!-- video-area end -->
@@ -746,7 +741,7 @@
 <div class="latest-blog-area fix">
   <!-- top blog start -->
   <div class="latest-blog-desc">
-    <a class="blog-more" href="#"><i class="fa fa-plus"></i></a>
+    <a class="blog-more" href="service.php"><i class="fa fa-plus"></i></a>
     <a class="latest-blog-img" href="#" style="background-image: url(img/blog/car.jpg);">
       <span class="image-over-style"></span>
     </a>
@@ -759,7 +754,7 @@
     </div>
   </div>
   <div class="latest-blog-desc">
-    <a class="blog-more" href="#"><i class="fa fa-plus"></i></a>
+    <a class="blog-more" href="service.php"><i class="fa fa-plus"></i></a>
     <a class="latest-blog-img" href="#" style="background-image: url(img/blog/boat.jpg);">
       <span class="image-over-style"></span>
     </a>
@@ -774,7 +769,7 @@
   <!-- top blog end -->
   <!-- bottom blog start -->
   <div class="latest-blog-desc">
-    <a class="blog-more" href="#"><i class="fa fa-plus"></i></a>
+    <a class="blog-more" href="service.php"><i class="fa fa-plus"></i></a>
     <a class="latest-blog-img" href="#" style="background-image: url(img/blog/gps.jpg);">
       <span class="image-over-style"></span>
     </a>
@@ -787,7 +782,7 @@
     </div>
   </div>
   <div class="latest-blog-desc">
-    <a class="blog-more" href="#"><i class="fa fa-plus"></i></a>
+    <a class="blog-more" href="service.php"><i class="fa fa-plus"></i></a>
     <a class="latest-blog-img" href="#" style="background-image: url(img/blog/ins.jpg);">
       <span class="image-over-style"></span>
     </a>
@@ -815,31 +810,31 @@
               <p class="small-text">* - обязательные поля</p>
               <form>
                 <div class="row">
-                  <div class="col-md-6 col-sm-6 col-xs-12">
+                  <div class="col-md-6 col-sm-6 col-xs-12 zindex-fix__upper">
                     <div class="control-level">
                       <label class="form-label" for="name"><span>Ваше имя</span> *</label>
                       <input id="name" name="name" type="text"/>
                     </div>
                   </div>
-                  <div class="col-md-6 col-sm-6 col-xs-12">
+                  <div class="col-md-6 col-sm-6 col-xs-12 zindex-fix__upper">
                     <div class="control-level">
                       <label class="form-label" for="phone"><span>Телефон</span> *</label>
                       <input id="phone" name="phone" type="tel"/>
                     </div>
                   </div>
-                  <div class="col-md-6 col-sm-6 col-xs-12">
+                  <div class="col-md-6 col-sm-6 col-xs-12 zindex-fix__upper">
                     <div class="control-level">
                       <label class="form-label" for="from"><span>Откуда</span></label>
                       <input id="from" name="from" type="text"/>
                     </div>
                   </div>
-                  <div class="col-md-6 col-sm-6 col-xs-12">
+                  <div class="col-md-6 col-sm-6 col-xs-12 zindex-fix__upper">
                     <div class="control-level">
                       <label class="form-label" for="to"><span>Куда</span></label>
                       <input id="to" name="to" type="text"/>
                     </div>
                   </div>
-                  <div class="col-md-12 col-sm-12">
+                  <div class="col-md-12 col-sm-12 zindex-fix__lower">
                     <div class="textarea-contact">
                       <label  class="form-label" for="textfield"><span>Сообщение</span></label>
                       <textarea class="textfield" id="textfield" cols="30" rows="10"></textarea>
@@ -896,8 +891,7 @@
             <ul>
               <li class="cc-space">
                 <span>Email:</span>
-                <span><a href="#">support@sitename.com</a> <br/>
-									<a href="#">info@sitename.com</a></span>
+                <span><a href="mailto:info@gtrans.group">info@gtrans.group</a> </span>
                 <div class="su-spacer"></div>
               </li>
               <li>
