--- a/service.html
+++ b/service.html
@@ -148,7 +148,7 @@
         <div class="col-md-12">
           <div class="mobile-menu">
             <div class="logo">
-              <a href="index.php"><img src="img/logo/logo-small-black.svg" alt="" width="80"/></a>
+              <a href="index.php"><img src="img/logo/logo-simple-black.svg" alt="" width="80"/></a>
             </div>
             <nav id="dropdown">
               <ul>
@@ -403,8 +403,7 @@
             <ul>
               <li class="cc-space">
                 <span>Email:</span>
-                <span><a href="#">support@sitename.com</a> <br/>
-									<a href="#">info@sitename.com</a></span>
+                <span><a href="mailto:info@gtrans.group">info@gtrans.group</a> </span>
                 <div class="su-spacer"></div>
               </li>
               <li>
