--- a/contact-us.html
+++ b/contact-us.html
@@ -236,28 +236,34 @@
               <p class="small-text">* - обязательные поля</p>
               <form>
                 <div class="row">
-                  <div class="col-md-6 col-sm-6 col-xs-12">
+<div class="col-md-6 col-sm-6 col-xs-12 zindex-fix__upper">
                     <div class="control-level">
                       <label class="form-label" for="name"><span>Ваше имя</span> *</label>
                       <input id="name" name="name" type="text"/>
                     </div>
                   </div>
-                  <div class="col-md-6 col-sm-6 col-xs-12">
+<div class="col-md-6 col-sm-6 col-xs-12 zindex-fix__upper">
                     <div class="control-level">
                       <label class="form-label" for="phone"><span>Телефон</span> *</label>
                       <input id="phone" name="phone" type="tel"/>
                     </div>
                   </div>
-                  <div class="col-md-6 col-sm-6 col-xs-12">
+<div class="col-md-6 col-sm-6 col-xs-12 zindex-fix__upper">
                     <div class="control-level">
                       <label class="form-label" for="from"><span>Откуда</span></label>
                       <input id="from" name="from" type="text"/>
                     </div>
                   </div>
-                  <div class="col-md-6 col-sm-6 col-xs-12">
+<div class="col-md-6 col-sm-6 col-xs-12 zindex-fix__upper">
                     <div class="control-level">
                       <label class="form-label" for="to"><span>Куда</span></label>
                       <input id="to" name="to" type="text"/>
+                    </div>
+                  </div>
+                  <div class="col-md-12 col-sm-12 zindex-fix__lower">
+                    <div class="textarea-contact">
+                      <label  class="form-label" for="textfield"><span>Сообщение</span></label>
+                      <textarea class="textfield" id="textfield" cols="30" rows="10"></textarea>
                     </div>
                   </div>
                   <div class="message"></div>
