--- a/moscow-irkutsk.html
+++ b/moscow-irkutsk.html
@@ -392,19 +392,10 @@
       <div class="col-xs-12 col-sm-6 col-md-6">
         <div class="service-dev-text">
           <h2>ПЕРЕВОЗКА <strong>АВТОМОБИЛЕЙ</strong></h2>
-          <p>Процесс перевозки транспортных средств по дорогам общего пользования на специализированных прицепах и
-            грузовиках-автовозах требует от компании серьёзной подготовки и знания всех тонкостей оказания такого рода
-            услуг. Перевозчики с небольшим опытом или без такогового вообще часто не могут правильно организовать весь
-            процесс, что приводит к срыву сроков доставки. Поэтому мы рекомендуем обращаться только к проверенным
-            профессионалам. </p>
-          <p>Компания GTrans же более 8 лет занимается перевозками самого разнообразного траснпорта. За это время
-            специалисты компании приобрели бесценный опыт, который нельзя заменить ни новейшими прицепами, ни красивым
-            офисом. Безусловно, эти составляющие также играют роль - именно поэтому мы озаботились приобретением только
-            современных транспортных средств и прицепов ведущих мировых производителей. А посетив наш офис, вы поймёте,
-            что вполне возможно сочетать все преимущества, полностью избавившись от недостатков. Первоклассный сервис,
-            гибкая тарифная политика и строгое соблюдение договорённостей не оставят вас равнодушными. </p>
-          <p></p>
-          <p></p>
+          <p>Компания GTrans поможет вам перевезти ваше транспортное средство из Москвы в Иркутск или в обратном направлении. Техническое оснащение и профессионализм специалистов компании позволяет произвести перевозку в минимально возможные сроки с соблюдением всхе требований безопасности траснпортировки.</p>
+          <p>Вы можете полностью довериться нашим менеджерам и забыть обо всех проблемах перевозки - мы возьмём заботы на себя. Подготовка документов, разрешений, организация процесса перевозки - всё будет максимально оперативно. И уже в самое ближайшее время ваше транспортное средство прибудет в пункт назначения. </p>
+          <p>Автопарк нашей компании состоит из современных тягачей и специализированных прицепов для всех существующих типов транспортных средств для дорог обещго пользования - мототранспорт, легковые и грузовые автомобили, коммерческий транспорт, автобусы. Надёжные механизмы фиксации полностью предотвращают какое-либо перемещение и повреждение имущества в процессе транспортировки.</p>
+          <p>Воспользоваться нашими услугаим очень просто - оставьте заявку на сайте или свяжитесь с нами любым удобным для вас способом. Наши менеджеры оперативно свяжутся с вами и подробно расскажут о дальнейших действиях. </p>
           <a class="readon border black" href="#features">Наши преимущества</a>
         </div>
       </div>
