--- a/pages/office.html
+++ b/pages/office.html
@@ -248,7 +248,7 @@
           <p>Компания GTrans осуществляет полный спектр услуг в области перевозки легковых и грузовых автомобилей из Москвы в Санкт-Петербург и обратно. Мы поможем вам с доставкой вашего транспортного средства в пункт назначения максимально оперативно, подготовим все необходимые документы, произведём погрузку и разгрузку в соблюдением строгих требований безопасности.</p>
           <p>Отправляя автомобили автовозами нашей компании, вы можете быть уверены в соблюдении сроков и полной сохранности вашего имущества. Доверьте свой автомобиль профессионалам - мы занимаемся перевозками уже более 8 лет и знаем все тонкости работы со всеми типами транспортных средств. </p>
           <p>Автопарк нашей компании состоит из современных тягачей и специализированных прицепов для всех существующих типов транспортных средств для дорог обещго пользования - мототранспорт, легковые и грузовые автомобили, коммерческий транспорт, автобусы. Надёжные механизмы фиксации полностью предотвращают какое-либо перемещение и повреждение имущества в процессе транспортировки.</p>
-          <p>Воспользоваться нашими услугаим очень просто - оставьте заявку на сайте или свяжитесь с нами любым удобным для вас способом. Наши менеджеры оператинво свяжутся с вами и подробно расскажут о дальнейших действиях. </p>
+          <p>Воспользоваться нашими услугаим очень просто - оставьте заявку на сайте или свяжитесь с нами любым удобным для вас способом. Наши менеджеры оперативно свяжутся с вами и подробно расскажут о дальнейших действиях. </p>
         </div>
       </div>
       <!-- love-work end -->
