--- a/moscow-chelyab.html
+++ b/moscow-chelyab.html
@@ -861,14 +861,14 @@
             <ul>
               <li>
                 <span>Адрес:</span>
-                <span>г. Москва<br>
-									ул. Красная Площадь, д. 1<br>
-									Лично</span>
+                <span>г. Химки<br>
+									ул. Рабочая, д. 2а, К22<br>
+									</span>
               </li>
               <li>
                 <span>Телефоны:</span>
                 <span>
-										+7 (999) 999-99-99 - Менеджер по безысходности<br>
+										+7 (495) 999-99-99 - Москва и область<br>
 									</span>
               </li>
             </ul>
