--- a/html-pages/contact-us.html
+++ b/html-pages/contact-us.html
@@ -99,35 +99,35 @@
                 <li><a href="directions.php">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="moscow-spb.php">Москва - Санкт-Петербург</a></li>
-                    <li><a href="moscow-nn.php">Москва - Нижний Новгород</a></li>
-                    <li><a href="moscow-ufa.php">Москва - Уфа</a></li>
-                    <li><a href="moscow-kazan.php">Москва - Казань</a></li>
-                    <li><a href="moscow-rnd.php">Москва - Ростов-на-Дону</a></li>
-                    <li><a href="moscow-chelyab.php">Москва - Челябинск</a></li>
-                    <li><a href="moscow-kaliningrad.php">Москва - Калининград</a></li>
-                    <li><a href="moscow-krasnodar.php">Москва - Краснодар</a></li>
-                    <li><a href="moscow-surgut.php">Москва - Сургут</a></li>
-                    <li><a href="moscow-novosib.php">Москва - Новосибирск</a></li>
-                    <li><a href="moscow-ekb.php">Москва - Екатеринбург</a></li>
-                    <li><a href="moscow-irkutsk.php">Москва - Иркутск</a></li>
-                    <li><a href="moscow-khabarovsk.php">Москва - Хабаровск</a></li>
-                    <li><a href="moscow-vladikavkaz.php">Москва - Владикавказ</a></li>
-                    <li><a href="moscow-mahachkala.php">Москва - Махачкала</a></li>
+                    <li><a href="moscow-nn.html">Москва - Нижний Новгород</a></li>
+                    <li><a href="moscow-ufa.html">Москва - Уфа</a></li>
+                    <li><a href="moscow-kazan.html">Москва - Казань</a></li>
+                    <li><a href="moscow-rnd.html">Москва - Ростов-на-Дону</a></li>
+                    <li><a href="moscow-chelyab.html">Москва - Челябинск</a></li>
+                    <li><a href="moscow-kaliningrad.html">Москва - Калининград</a></li>
+                    <li><a href="moscow-krasnodar.html">Москва - Краснодар</a></li>
+                    <li><a href="moscow-surgut.html">Москва - Сургут</a></li>
+                    <li><a href="moscow-novosib.html">Москва - Новосибирск</a></li>
+                    <li><a href="moscow-ekb.html">Москва - Екатеринбург</a></li>
+                    <li><a href="moscow-irkutsk.html">Москва - Иркутск</a></li>
+                    <li><a href="moscow-khabarovsk.html">Москва - Хабаровск</a></li>
+                    <li><a href="moscow-vladikavkaz.html">Москва - Владикавказ</a></li>
+                    <li><a href="moscow-mahachkala.html">Москва - Махачкала</a></li>
                     <li><a href="moscow-spb.php">Санкт-Петербург - Москва</a></li>
-                    <li><a href="moscow-nn.php">Нижний Новгород - Москва</a></li>
-                    <li><a href="moscow-ufa.php">Уфа - Москва</a></li>
-                    <li><a href="moscow-kazan.php">Казань - Москва</a></li>
-                    <li><a href="moscow-rnd.php">Ростов-на-Дону - Москва</a></li>
-                    <li><a href="moscow-chelyab.php">Челябинск - Москва</a></li>
-                    <li><a href="moscow-kaliningrad.php">Калининград - Москва</a></li>
-                    <li><a href="moscow-krasnodar.php">Краснодар - Москва</a></li>
-                    <li><a href="moscow-surgut.php">Сургут - Москва</a></li>
-                    <li><a href="moscow-novosib.php">Новосибирск - Москва</a></li>
-                    <li><a href="moscow-ekb.php">Екатеринбург - Москва</a></li>
-                    <li><a href="moscow-irkutsk.php">Иркутск - Москва</a></li>
-                    <li><a href="moscow-khabarovsk.php">Хабаровск - Москва</a></li>
-                    <li><a href="moscow-vladikavkaz.php">Владикавказ - Москва</a></li>
-                    <li><a href="moscow-mahachkala.php">Махачкала - Москва</a></li>
+                    <li><a href="moscow-nn.html">Нижний Новгород - Москва</a></li>
+                    <li><a href="moscow-ufa.html">Уфа - Москва</a></li>
+                    <li><a href="moscow-kazan.html">Казань - Москва</a></li>
+                    <li><a href="moscow-rnd.html">Ростов-на-Дону - Москва</a></li>
+                    <li><a href="moscow-chelyab.html">Челябинск - Москва</a></li>
+                    <li><a href="moscow-kaliningrad.html">Калининград - Москва</a></li>
+                    <li><a href="moscow-krasnodar.html">Краснодар - Москва</a></li>
+                    <li><a href="moscow-surgut.html">Сургут - Москва</a></li>
+                    <li><a href="moscow-novosib.html">Новосибирск - Москва</a></li>
+                    <li><a href="moscow-ekb.html">Екатеринбург - Москва</a></li>
+                    <li><a href="moscow-irkutsk.html">Иркутск - Москва</a></li>
+                    <li><a href="moscow-khabarovsk.html">Хабаровск - Москва</a></li>
+                    <li><a href="moscow-vladikavkaz.html">Владикавказ - Москва</a></li>
+                    <li><a href="moscow-mahachkala.html">Махачкала - Москва</a></li>
                   </ul>
                 </li>
                 <li><a href="transport.php">Автопарк</a></li>
@@ -148,7 +148,7 @@
         <div class="col-md-12">
           <div class="mobile-menu">
             <div class="logo">
-              <a href="index.php"><img src="img/logo/logo-simple-black.svg" alt="" width="80"/></a>
+              <a href="index.php"><img src="img/logo/logo-small-black.svg" alt="" width="80"/></a>
             </div>
             <nav id="dropdown">
               <ul>
@@ -158,35 +158,35 @@
                 <li><a href="directions.php">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="moscow-spb.php">Москва - Санкт-Петербург</a></li>
-                    <li><a href="moscow-nn.php">Москва - Нижний Новгород</a></li>
-                    <li><a href="moscow-ufa.php">Москва - Уфа</a></li>
-                    <li><a href="moscow-kazan.php">Москва - Казань</a></li>
-                    <li><a href="moscow-rnd.php">Москва - Ростов-на-Дону</a></li>
-                    <li><a href="moscow-chelyab.php">Москва - Челябинск</a></li>
-                    <li><a href="moscow-kaliningrad.php">Москва - Калининград</a></li>
-                    <li><a href="moscow-krasnodar.php">Москва - Краснодар</a></li>
-                    <li><a href="moscow-surgut.php">Москва - Сургут</a></li>
-                    <li><a href="moscow-novosib.php">Москва - Новосибирск</a></li>
-                    <li><a href="moscow-ekb.php">Москва - Екатеринбург</a></li>
-                    <li><a href="moscow-irkutsk.php">Москва - Иркутск</a></li>
-                    <li><a href="moscow-khabarovsk.php">Москва - Хабаровск</a></li>
-                    <li><a href="moscow-vladikavkaz.php">Москва - Владикавказ</a></li>
-                    <li><a href="moscow-mahachkala.php">Москва - Махачкала</a></li>
+                    <li><a href="moscow-nn.html">Москва - Нижний Новгород</a></li>
+                    <li><a href="moscow-ufa.html">Москва - Уфа</a></li>
+                    <li><a href="moscow-kazan.html">Москва - Казань</a></li>
+                    <li><a href="moscow-rnd.html">Москва - Ростов-на-Дону</a></li>
+                    <li><a href="moscow-chelyab.html">Москва - Челябинск</a></li>
+                    <li><a href="moscow-kaliningrad.html">Москва - Калининград</a></li>
+                    <li><a href="moscow-krasnodar.html">Москва - Краснодар</a></li>
+                    <li><a href="moscow-surgut.html">Москва - Сургут</a></li>
+                    <li><a href="moscow-novosib.html">Москва - Новосибирск</a></li>
+                    <li><a href="moscow-ekb.html">Москва - Екатеринбург</a></li>
+                    <li><a href="moscow-irkutsk.html">Москва - Иркутск</a></li>
+                    <li><a href="moscow-khabarovsk.html">Москва - Хабаровск</a></li>
+                    <li><a href="moscow-vladikavkaz.html">Москва - Владикавказ</a></li>
+                    <li><a href="moscow-mahachkala.html">Москва - Махачкала</a></li>
                     <li><a href="moscow-spb.php">Санкт-Петербург - Москва</a></li>
-                    <li><a href="moscow-nn.php">Нижний Новгород - Москва</a></li>
-                    <li><a href="moscow-ufa.php">Уфа - Москва</a></li>
-                    <li><a href="moscow-kazan.php">Казань - Москва</a></li>
-                    <li><a href="moscow-rnd.php">Ростов-на-Дону - Москва</a></li>
-                    <li><a href="moscow-chelyab.php">Челябинск - Москва</a></li>
-                    <li><a href="moscow-kaliningrad.php">Калининград - Москва</a></li>
-                    <li><a href="moscow-krasnodar.php">Краснодар - Москва</a></li>
-                    <li><a href="moscow-surgut.php">Сургут - Москва</a></li>
-                    <li><a href="moscow-novosib.php">Новосибирск - Москва</a></li>
-                    <li><a href="moscow-ekb.php">Екатеринбург - Москва</a></li>
-                    <li><a href="moscow-irkutsk.php">Иркутск - Москва</a></li>
-                    <li><a href="moscow-khabarovsk.php">Хабаровск - Москва</a></li>
-                    <li><a href="moscow-vladikavkaz.php">Владикавказ - Москва</a></li>
-                    <li><a href="moscow-mahachkala.php">Махачкала - Москва</a></li>
+                    <li><a href="moscow-nn.html">Нижний Новгород - Москва</a></li>
+                    <li><a href="moscow-ufa.html">Уфа - Москва</a></li>
+                    <li><a href="moscow-kazan.html">Казань - Москва</a></li>
+                    <li><a href="moscow-rnd.html">Ростов-на-Дону - Москва</a></li>
+                    <li><a href="moscow-chelyab.html">Челябинск - Москва</a></li>
+                    <li><a href="moscow-kaliningrad.html">Калининград - Москва</a></li>
+                    <li><a href="moscow-krasnodar.html">Краснодар - Москва</a></li>
+                    <li><a href="moscow-surgut.html">Сургут - Москва</a></li>
+                    <li><a href="moscow-novosib.html">Новосибирск - Москва</a></li>
+                    <li><a href="moscow-ekb.html">Екатеринбург - Москва</a></li>
+                    <li><a href="moscow-irkutsk.html">Иркутск - Москва</a></li>
+                    <li><a href="moscow-khabarovsk.html">Хабаровск - Москва</a></li>
+                    <li><a href="moscow-vladikavkaz.html">Владикавказ - Москва</a></li>
+                    <li><a href="moscow-mahachkala.html">Махачкала - Москва</a></li>
                   </ul>
                 </li>
                 <li><a href="transport.php">Автопарк</a></li>
@@ -236,31 +236,31 @@
               <p class="small-text">* - обязательные поля</p>
               <form>
                 <div class="row">
-<div class="col-md-6 col-sm-6 col-xs-12 zindex-fix__upper">
+                  <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="control-level">
                       <label class="form-label" for="name"><span>Ваше имя</span> *</label>
                       <input id="name" name="name" type="text"/>
                     </div>
                   </div>
-<div class="col-md-6 col-sm-6 col-xs-12 zindex-fix__upper">
+                  <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="control-level">
                       <label class="form-label" for="phone"><span>Телефон</span> *</label>
                       <input id="phone" name="phone" type="tel"/>
                     </div>
                   </div>
-<div class="col-md-6 col-sm-6 col-xs-12 zindex-fix__upper">
+                  <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="control-level">
                       <label class="form-label" for="from"><span>Откуда</span></label>
                       <input id="from" name="from" type="text"/>
                     </div>
                   </div>
-<div class="col-md-6 col-sm-6 col-xs-12 zindex-fix__upper">
+                  <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="control-level">
                       <label class="form-label" for="to"><span>Куда</span></label>
                       <input id="to" name="to" type="text"/>
                     </div>
                   </div>
-                  <div class="col-md-12 col-sm-12 zindex-fix__lower">
+                  <div class="col-md-12 col-sm-12">
                     <div class="textarea-contact">
                       <label  class="form-label" for="textfield"><span>Сообщение</span></label>
                       <textarea class="textfield" id="textfield" cols="30" rows="10"></textarea>
@@ -332,7 +332,8 @@
             <ul>
               <li class="cc-space">
                 <span>Email:</span>
-                <span><a href="mailto:info@gtrans.group">info@gtrans.group</a> </span>
+                <span><a href="#">support@sitename.com</a> <br/>
+									<a href="#">info@sitename.com</a></span>
                 <div class="su-spacer"></div>
               </li>
               <li>
