--- a/html-pages/service.html
+++ b/html-pages/service.html
@@ -99,35 +99,35 @@
                 <li><a href="directions.php">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="moscow-spb.php">Москва - Санкт-Петербург</a></li>
-                    <li><a href="moscow-nn.php">Москва - Нижний Новгород</a></li>
-                    <li><a href="moscow-ufa.php">Москва - Уфа</a></li>
-                    <li><a href="moscow-kazan.php">Москва - Казань</a></li>
-                    <li><a href="moscow-rnd.php">Москва - Ростов-на-Дону</a></li>
-                    <li><a href="moscow-chelyab.php">Москва - Челябинск</a></li>
-                    <li><a href="moscow-kaliningrad.php">Москва - Калининград</a></li>
-                    <li><a href="moscow-krasnodar.php">Москва - Краснодар</a></li>
-                    <li><a href="moscow-surgut.php">Москва - Сургут</a></li>
-                    <li><a href="moscow-novosib.php">Москва - Новосибирск</a></li>
-                    <li><a href="moscow-ekb.php">Москва - Екатеринбург</a></li>
-                    <li><a href="moscow-irkutsk.php">Москва - Иркутск</a></li>
-                    <li><a href="moscow-khabarovsk.php">Москва - Хабаровск</a></li>
-                    <li><a href="moscow-vladikavkaz.php">Москва - Владикавказ</a></li>
-                    <li><a href="moscow-mahachkala.php">Москва - Махачкала</a></li>
+                    <li><a href="moscow-nn.html">Москва - Нижний Новгород</a></li>
+                    <li><a href="moscow-ufa.html">Москва - Уфа</a></li>
+                    <li><a href="moscow-kazan.html">Москва - Казань</a></li>
+                    <li><a href="moscow-rnd.html">Москва - Ростов-на-Дону</a></li>
+                    <li><a href="moscow-chelyab.html">Москва - Челябинск</a></li>
+                    <li><a href="moscow-kaliningrad.html">Москва - Калининград</a></li>
+                    <li><a href="moscow-krasnodar.html">Москва - Краснодар</a></li>
+                    <li><a href="moscow-surgut.html">Москва - Сургут</a></li>
+                    <li><a href="moscow-novosib.html">Москва - Новосибирск</a></li>
+                    <li><a href="moscow-ekb.html">Москва - Екатеринбург</a></li>
+                    <li><a href="moscow-irkutsk.html">Москва - Иркутск</a></li>
+                    <li><a href="moscow-khabarovsk.html">Москва - Хабаровск</a></li>
+                    <li><a href="moscow-vladikavkaz.html">Москва - Владикавказ</a></li>
+                    <li><a href="moscow-mahachkala.html">Москва - Махачкала</a></li>
                     <li><a href="moscow-spb.php">Санкт-Петербург - Москва</a></li>
-                    <li><a href="moscow-nn.php">Нижний Новгород - Москва</a></li>
-                    <li><a href="moscow-ufa.php">Уфа - Москва</a></li>
-                    <li><a href="moscow-kazan.php">Казань - Москва</a></li>
-                    <li><a href="moscow-rnd.php">Ростов-на-Дону - Москва</a></li>
-                    <li><a href="moscow-chelyab.php">Челябинск - Москва</a></li>
-                    <li><a href="moscow-kaliningrad.php">Калининград - Москва</a></li>
-                    <li><a href="moscow-krasnodar.php">Краснодар - Москва</a></li>
-                    <li><a href="moscow-surgut.php">Сургут - Москва</a></li>
-                    <li><a href="moscow-novosib.php">Новосибирск - Москва</a></li>
-                    <li><a href="moscow-ekb.php">Екатеринбург - Москва</a></li>
-                    <li><a href="moscow-irkutsk.php">Иркутск - Москва</a></li>
-                    <li><a href="moscow-khabarovsk.php">Хабаровск - Москва</a></li>
-                    <li><a href="moscow-vladikavkaz.php">Владикавказ - Москва</a></li>
-                    <li><a href="moscow-mahachkala.php">Махачкала - Москва</a></li>
+                    <li><a href="moscow-nn.html">Нижний Новгород - Москва</a></li>
+                    <li><a href="moscow-ufa.html">Уфа - Москва</a></li>
+                    <li><a href="moscow-kazan.html">Казань - Москва</a></li>
+                    <li><a href="moscow-rnd.html">Ростов-на-Дону - Москва</a></li>
+                    <li><a href="moscow-chelyab.html">Челябинск - Москва</a></li>
+                    <li><a href="moscow-kaliningrad.html">Калининград - Москва</a></li>
+                    <li><a href="moscow-krasnodar.html">Краснодар - Москва</a></li>
+                    <li><a href="moscow-surgut.html">Сургут - Москва</a></li>
+                    <li><a href="moscow-novosib.html">Новосибирск - Москва</a></li>
+                    <li><a href="moscow-ekb.html">Екатеринбург - Москва</a></li>
+                    <li><a href="moscow-irkutsk.html">Иркутск - Москва</a></li>
+                    <li><a href="moscow-khabarovsk.html">Хабаровск - Москва</a></li>
+                    <li><a href="moscow-vladikavkaz.html">Владикавказ - Москва</a></li>
+                    <li><a href="moscow-mahachkala.html">Махачкала - Москва</a></li>
                   </ul>
                 </li>
                 <li><a href="transport.php">Автопарк</a></li>
@@ -148,7 +148,7 @@
         <div class="col-md-12">
           <div class="mobile-menu">
             <div class="logo">
-              <a href="index.php"><img src="img/logo/logo-simple-black.svg" alt="" width="80"/></a>
+              <a href="index.php"><img src="img/logo/logo-small-black.svg" alt="" width="80"/></a>
             </div>
             <nav id="dropdown">
               <ul>
@@ -158,35 +158,35 @@
                 <li><a href="directions.php">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="moscow-spb.php">Москва - Санкт-Петербург</a></li>
-                    <li><a href="moscow-nn.php">Москва - Нижний Новгород</a></li>
-                    <li><a href="moscow-ufa.php">Москва - Уфа</a></li>
-                    <li><a href="moscow-kazan.php">Москва - Казань</a></li>
-                    <li><a href="moscow-rnd.php">Москва - Ростов-на-Дону</a></li>
-                    <li><a href="moscow-chelyab.php">Москва - Челябинск</a></li>
-                    <li><a href="moscow-kaliningrad.php">Москва - Калининград</a></li>
-                    <li><a href="moscow-krasnodar.php">Москва - Краснодар</a></li>
-                    <li><a href="moscow-surgut.php">Москва - Сургут</a></li>
-                    <li><a href="moscow-novosib.php">Москва - Новосибирск</a></li>
-                    <li><a href="moscow-ekb.php">Москва - Екатеринбург</a></li>
-                    <li><a href="moscow-irkutsk.php">Москва - Иркутск</a></li>
-                    <li><a href="moscow-khabarovsk.php">Москва - Хабаровск</a></li>
-                    <li><a href="moscow-vladikavkaz.php">Москва - Владикавказ</a></li>
-                    <li><a href="moscow-mahachkala.php">Москва - Махачкала</a></li>
+                    <li><a href="moscow-nn.html">Москва - Нижний Новгород</a></li>
+                    <li><a href="moscow-ufa.html">Москва - Уфа</a></li>
+                    <li><a href="moscow-kazan.html">Москва - Казань</a></li>
+                    <li><a href="moscow-rnd.html">Москва - Ростов-на-Дону</a></li>
+                    <li><a href="moscow-chelyab.html">Москва - Челябинск</a></li>
+                    <li><a href="moscow-kaliningrad.html">Москва - Калининград</a></li>
+                    <li><a href="moscow-krasnodar.html">Москва - Краснодар</a></li>
+                    <li><a href="moscow-surgut.html">Москва - Сургут</a></li>
+                    <li><a href="moscow-novosib.html">Москва - Новосибирск</a></li>
+                    <li><a href="moscow-ekb.html">Москва - Екатеринбург</a></li>
+                    <li><a href="moscow-irkutsk.html">Москва - Иркутск</a></li>
+                    <li><a href="moscow-khabarovsk.html">Москва - Хабаровск</a></li>
+                    <li><a href="moscow-vladikavkaz.html">Москва - Владикавказ</a></li>
+                    <li><a href="moscow-mahachkala.html">Москва - Махачкала</a></li>
                     <li><a href="moscow-spb.php">Санкт-Петербург - Москва</a></li>
-                    <li><a href="moscow-nn.php">Нижний Новгород - Москва</a></li>
-                    <li><a href="moscow-ufa.php">Уфа - Москва</a></li>
-                    <li><a href="moscow-kazan.php">Казань - Москва</a></li>
-                    <li><a href="moscow-rnd.php">Ростов-на-Дону - Москва</a></li>
-                    <li><a href="moscow-chelyab.php">Челябинск - Москва</a></li>
-                    <li><a href="moscow-kaliningrad.php">Калининград - Москва</a></li>
-                    <li><a href="moscow-krasnodar.php">Краснодар - Москва</a></li>
-                    <li><a href="moscow-surgut.php">Сургут - Москва</a></li>
-                    <li><a href="moscow-novosib.php">Новосибирск - Москва</a></li>
-                    <li><a href="moscow-ekb.php">Екатеринбург - Москва</a></li>
-                    <li><a href="moscow-irkutsk.php">Иркутск - Москва</a></li>
-                    <li><a href="moscow-khabarovsk.php">Хабаровск - Москва</a></li>
-                    <li><a href="moscow-vladikavkaz.php">Владикавказ - Москва</a></li>
-                    <li><a href="moscow-mahachkala.php">Махачкала - Москва</a></li>
+                    <li><a href="moscow-nn.html">Нижний Новгород - Москва</a></li>
+                    <li><a href="moscow-ufa.html">Уфа - Москва</a></li>
+                    <li><a href="moscow-kazan.html">Казань - Москва</a></li>
+                    <li><a href="moscow-rnd.html">Ростов-на-Дону - Москва</a></li>
+                    <li><a href="moscow-chelyab.html">Челябинск - Москва</a></li>
+                    <li><a href="moscow-kaliningrad.html">Калининград - Москва</a></li>
+                    <li><a href="moscow-krasnodar.html">Краснодар - Москва</a></li>
+                    <li><a href="moscow-surgut.html">Сургут - Москва</a></li>
+                    <li><a href="moscow-novosib.html">Новосибирск - Москва</a></li>
+                    <li><a href="moscow-ekb.html">Екатеринбург - Москва</a></li>
+                    <li><a href="moscow-irkutsk.html">Иркутск - Москва</a></li>
+                    <li><a href="moscow-khabarovsk.html">Хабаровск - Москва</a></li>
+                    <li><a href="moscow-vladikavkaz.html">Владикавказ - Москва</a></li>
+                    <li><a href="moscow-mahachkala.html">Махачкала - Москва</a></li>
                   </ul>
                 </li>
                 <li><a href="transport.php">Автопарк</a></li>
@@ -342,6 +342,9 @@
             современных транспортных средств и прицепов ведущих мировых производителей. А посетив наш офис, вы поймёте,
             что вполне возможно сочетать все преимущества, полностью избавившись от недостатков. Первоклассный сервис,
             гибкая тарифная политика и строгое соблюдение договорённостей не оставят вас равнодушными. </p>
+          <p></p>
+          <p></p>
+          <a class="readon border black" href="#features">Наши преимущества</a>
         </div>
       </div>
     </div>
@@ -400,7 +403,8 @@
             <ul>
               <li class="cc-space">
                 <span>Email:</span>
-                <span><a href="mailto:info@gtrans.group">info@gtrans.group</a> </span>
+                <span><a href="#">support@sitename.com</a> <br/>
+									<a href="#">info@sitename.com</a></span>
                 <div class="su-spacer"></div>
               </li>
               <li>
