--- a/moscow-mahachkala.html
+++ b/moscow-mahachkala.html
@@ -647,7 +647,7 @@
 <div class="video-area-4 fix">
   <div class="dark-bg"></div>
   <div id="bg-container">
-    <video id="bg" poster="img/slider/slider-1/3.jpg" autoplay loop controls tabindex="0">
+    <video id="bg" poster="img/slider/slider-1/3.jpg" autoplay muted loop controls tabindex="0">
       <source src="video/video-360p.mp4" type="video/mp4">
     </video>
   </div>
